# neurobotics

./: .bashrc  README.md  tensorflow
local_planner_wrapper/: CMakeLists.txt  package.xml  planner_plugin.xml
local_planner_wrapper/include/local_planner_wrapper/: local_planner_wrapper.h
local_planner_wrapper/src/: local_planner_wrapper.cpp
neuro_deep_planner/: CMakeLists.txt  package.xml
neuro_deep_planner/pre_trained_filters/: checkpoint  my_model  pre_trained_filters
neuro_deep_planner/pre_trained_networks/: checkpoint
neuro_deep_planner/scripts/: neuro_deep_planner.py  neuro_input_visualizer.py  ros_handler.py
neuro_deep_planner/src/: actor.py  autoencoder.py  critic.py  data_manager.py  ddpg.py  grad_inverter.py  initial_replay_buffer.p.REMOVED.git-id  neuro_deep_planner.py  neuro_deep_planner_node.py  neuro_input_visualizer.py  ou_noise.py  ros_handler.py  state_visualizer.py  tensorflow_grad_inverter.py
neuro_local_planner_wrapper/: CMakeLists.txt  README.md  package.xml  planner_plugin.xml
neuro_local_planner_wrapper/include/neuro_local_planner_wrapper/: neuro_local_planner_wrapper.h
neuro_local_planner_wrapper/msg/: Transition.msg
neuro_local_planner_wrapper/src/: neuro_local_planner_wrapper.cpp
neuro_stage_ros/: CMakeLists.txt  package.xml
neuro_stage_ros/src/: stageros.cpp
neuro_stage_sim/: CMakeLists.txt  Readme.md  package.xml  recovery_plugin.xml
neuro_stage_sim/include/keep_going_recovery/: keep_going_recovery.h
neuro_stage_sim/include/neuro_fake_recovery/: neuro_fake_recovery.h
neuro_stage_sim/launch/: amcl.launch.xml  costmap_2d_node.launch  move_base.launch.xml  move_base.launch.xml~  neuro_stage_sim.launch  neuro_stage_sim_no_rviz.launch
neuro_stage_sim/maps/stage/: maze.world  robopark_plan.world  turtlebot.inc  wanderbot.inc
neuro_stage_sim/param/: costmap_2d_node.yaml  costmap_common_params.yaml  global_costmap_params.yaml~  global_planner_params.yaml  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_params.yaml
neuro_stage_sim/rviz/: robot_navigation.rviz
neuro_stage_sim/src/: keep_going_recovery.cpp  neuro_fake_recovery.cpp  neuro_stage_sim_bot.cpp  neuro_training_bot.cpp
stage_ros_custom/: CMakeLists.txt  package.xml
stage_ros_custom/src/: stageros.cpp
