<?xml version="1.0"?>
<package>
  <name>neuro_stage_sim</name>
  <version>1.0.0</version>
  <description>
    2D Simulation launching package for now with turtlebot
  </description>

  <maintainer email="jakob_breuninger@gmx.de">Jakob Breuninger</maintainer>
  <author email="jakob_breuninger@gmx.de">Jakob Breuninger</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>

  <run_depend>stage_ros</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>yocs_virtual_sensor</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>

  <export>
    <nav_core plugin="${prefix}/recovery_plugin.xml" />
  </export>
</package>
